# rc5

./: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: rc5.rs
src/: error.rs  internal_macro.rs  lib.rs  rc5.rs
